--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,8 @@
   text-align: center;
 }
 
+html {min-height:100%;position:relative;}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
